--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "vite-plugin-copy-files": "^1.1.1"
   },
   "dependencies": {
-    "@idscan/idvc2": "file:idscan-idvc2-2.5.9-beta.tgz"
+    "@idscan/idvc2": "file:idscan-idvc2-2.6.1.tgz"
   }
 }
