--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
     "rollup-plugin-copy": "^3.4.0",
     "vite": "^4.3.9",
-    "vite-plugin-copy-files": "^1.1.1"
+    "vite-plugin-copy-files": "^1.1.1",
+    "vite-plugin-mkcert": "^1.16.0"
   },
   "dependencies": {
-    "@idscan/idvc2": "file:idscan-idvc2-2.7.1.tgz"
+    "@idscan/idvc2": "file:idscan-idvc2-2.7.3.tgz"
   }
 }
