--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "vite-plugin-mkcert": "^1.16.0"
   },
   "dependencies": {
-    "@idscan/idvc2": "file:idscan-idvc2-2.10.3.tgz"
+    "@idscan/idvc2": "file:idscan-idvc2-2.11.0-logs.tgz"
   }
 }
