--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "vite-plugin-mkcert": "^1.16.0"
   },
   "dependencies": {
-    "@idscan/idvc2": "file:idscan-idvc2-2.12.2-pdf-bbox.tgz"
+    "@idscan/idvc2": "file:idscan-idvc2-2.12.2-pdf-bbox-2.tgz"
   }
 }
