--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "vite-plugin-mkcert": "^1.16.0"
   },
   "dependencies": {
-    "@idscan/idvc2": "file:idscan-idvc2-3.0.0-rc-6.tgz"
+    "@idscan/idvc2": "file:idscan-idvc2-3.0.0.tgz"
   }
 }
